--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,6 @@ body {
 
 /* Утилиты */
 
-.hidden {
-  display: none;
-}
-
 ul {
   padding-left: 0px;
   margin-top: 0px;
@@ -67,23 +63,23 @@ img {
 .header {
   border-bottom: 1px solid #ececec;
 }
-.main-nav {
+.header__container {
   display: flex;
   align-items: center;
 }
 
-.nav {
+.header__nav {
   display: flex;
 }
 
-.nav-list {
+.header__list {
   display: flex;
 }
 
-.nav-list-item {
+.header__item {
   margin-right: 50px;
 }
-.nav-list-item:last-child {
+.header__item:last-child {
   margin-right: 0px;
 }
 
@@ -99,21 +95,15 @@ img {
   font-size: 26px;
   line-height: 1.2;
 }
-.logo-accent {
+.logo--accent {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   color: var(--primery-text-coloure);
 }
-.footer .logo {
-  display: inline-block;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin-bottom: 20px;
-  margin-right: 0px;
-}
-.nav .link {
+
+.header__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -126,17 +116,17 @@ img {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav .link:hover,
-.nav .link:focus,
-.nav .link:active {
+.header__link:hover,
+.header__link:focus,
+.header__link:active {
   color: var(--accent-coloure);
 }
-.link.current {
+.header__link--current {
   color: var(--accent-coloure);
   position: relative;
 }
 
-.link.current::after {
+.header__link--current::after {
   display: block;
   position: absolute;
   content: "";
@@ -148,15 +138,15 @@ img {
   border-radius: 2px;
 }
 
-.list-contacts {
+.contact-info {
   display: flex;
   margin-left: auto;
 }
-.item-contacts + .item-contacts {
+.contact-info__item + .contact-info__item {
   margin-left: 50px;
 }
 
-.header-contacts {
+.contact-info__link {
   color: var(--secondary-text-coloure);
   font-weight: 500;
   font-size: 14px;
@@ -167,25 +157,31 @@ img {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-contacts:hover,
-.header-contacts:focus {
+.contact-info__link:hover,
+.contact-info__link:focus {
   color: var(--accent-coloure);
 }
 
-.header-icon {
+.contact-info__icon {
   fill: #757575;
   margin-right: 10px;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-contacts:hover .header-icon,
-.header-contacts:focus .header-icon {
+.contact-info__link:hover .contact-info__icon,
+.contact-info__link:focus .contact-info__icon {
   fill: var(--accent-coloure);
 }
 
 /* Основной блок студии */
 
-.overlay {
+/* Герой */
+
+.hero {
+  text-align: center;
+}
+
+.hero__overlay {
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
@@ -205,11 +201,7 @@ img {
   padding-bottom: 200px;
 }
 
-.hero {
-  text-align: center;
-}
-
-.hero-title {
+.hero__title {
   margin-bottom: 30px;
   margin-top: 0px;
   margin-left: auto;
@@ -224,7 +216,7 @@ img {
 
   width: 696px;
 }
-.hero-button {
+.hero__button {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
@@ -241,31 +233,28 @@ img {
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-button:focus,
-.hero-button:hover {
+.hero__button:focus,
+.hero__button:hover {
   background-color: #188ce8;
 }
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.studio-section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
-  text-align: center;
-  color: var(--primery-text-coloure);
-}
-
 /* Особенности */
-.list-features {
+
+.features--hidden {
+  display: none;
+}
+.features__list {
   display: flex;
 }
-.list-features-item + .list-features-item {
+.features__item + .features__item {
   margin-left: 30px;
 }
-.icon-background {
+.features__bcg {
   display: block;
 
   margin-bottom: 30px;
@@ -277,36 +266,44 @@ img {
   padding-bottom: 25px;
 }
 
-.features .subtitle {
+.features__subtitle {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   text-transform: uppercase;
   color: var(--primery-text-coloure);
 }
-.features .text {
+.features__text {
   font-size: 14px;
-  line-height: 1.7x;
-}
-.studio-section-title {
-  margin-bottom: 50px;
-  margin-top: 0px;
+  line-height: 1.7;
 }
 
 /* Чем мы занимаемся */
 
-.section.doing {
+.activities {
   padding-top: 0px;
 }
-.list-doing {
+
+.activities__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+  color: var(--primery-text-coloure);
+
+  margin-bottom: 50px;
+  margin-top: 0px;
+}
+
+.activities__list {
   display: flex;
   justify-content: space-between;
 }
 
-.doing-thumb {
+.activities__thumb {
   position: relative;
 }
-.doing-action {
+.activities__text {
   display: inline-block;
   content: "";
   width: 100%;
@@ -327,32 +324,33 @@ img {
 
 /* Наша команда */
 
-.team .subtitle {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  color: var(--primery-text-coloure);
-}
-.team .text {
-  font-size: 16px;
-  line-height: 1.2;
-}
 .team {
   background-color: #f5f4fa;
 }
-.img-team {
+
+.team__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+  color: var(--primery-text-coloure);
+
+  margin-bottom: 50px;
   margin-top: 0px;
 }
-.team .text {
-  margin-top: 0px;
-}
-.team .list-team {
+
+.card-set {
   display: flex;
 }
-.team-card + .team-card {
+
+.card-set__item + .card-set__item {
   margin-left: 30px;
 }
-.wrapper-team {
+.card-set__img {
+  margin-top: 0px;
+}
+
+.card-set__wrapper {
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
@@ -362,16 +360,28 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team-list-social-media {
+.card-set__subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  color: var(--primery-text-coloure);
+}
+.card-set__text {
+  font-size: 16px;
+  line-height: 1.2;
+  margin-top: 0px;
+}
+
+.card-set__social-list {
   display: flex;
   margin-top: 16px;
   justify-content: center;
 }
-.team-item-social-media + .team-item-social-media {
+.card-set__social-list + .card-set__social-list {
   margin-left: 10px;
 }
 
-.wrapper-social-link {
+.card-set__link {
   display: block;
   width: 44px;
   height: 44px;
@@ -381,18 +391,18 @@ img {
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.wrapper-social-link:hover,
-.wrapper-social-link:focus {
+.card-set__link:hover,
+.card-set__link:focus {
   background-color: var(--accent-coloure);
 }
 
-.team-symbol-link {
+.card-set__icon {
   fill: #afb1b8;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.wrapper-social-link:hover .team-symbol-link,
-.wrapper-social-link:focus .team-symbol-link {
+.card-set__link:hover .card-set__icon,
+.card-set__link:focus .card-set__icon {
   fill: #fff;
 }
 
@@ -569,7 +579,13 @@ img {
   display: flex;
   justify-content: space-between;
 }
-
+.footer .logo {
+  display: inline-block;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 20px;
+  margin-right: 0px;
+}
 .footer-contacts {
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
