--- a/css/styles.css
+++ b/css/styles.css
@@ -731,7 +731,7 @@ img {
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.7);
 }
-.modal-button {
+.modal__button {
   display: block;
   padding-left: 5px;
   padding-top: 6px;
@@ -745,30 +745,22 @@ img {
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-close {
+.modal__icon-close {
   width: 18px;
 }
-.modal-button:hover,
-.modal-button:focus {
+.modal__button:hover,
+.modal__button:focus {
   fill: var(--accent-coloure);
 }
 
-.modal-wrapper {
+.modal__wrapper {
   margin-bottom: 40px;
   margin-left: 40px;
   margin-right: 40px;
   margin-top: 2px;
   width: 448px;
 }
-.form-group {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-.form-group + .form-group {
-  margin-top: 10px;
-}
-.modal-form-title {
+.modal__title {
   margin-bottom: 12px;
 
   font-weight: 700;
@@ -778,7 +770,16 @@ img {
 
   color: var(--primery-text-coloure);
 }
-.form-group input {
+.form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.form + .form {
+  margin-top: 10px;
+}
+
+.form input {
   margin: 0;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -792,10 +793,10 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-group input:focus + .input-icon {
+.form input:focus + .form__icon {
   fill: var(--accent-coloure);
 }
-.form-group input:focus {
+.form input:focus {
   border: 1px solid var(--accent-coloure);
   outline-color: var(--accent-coloure);
 }
@@ -803,7 +804,7 @@ img {
 textarea {
   resize: none;
 }
-.form-group textarea {
+.form textarea {
   height: 120px;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -816,12 +817,12 @@ textarea {
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-group textarea:focus {
+.form textarea:focus {
   border: 1px solid var(--accent-coloure);
   outline-color: var(--accent-coloure);
 }
 
-.form-group label {
+.form label {
   margin-bottom: 4px;
 
   font-size: 12px;
@@ -830,20 +831,25 @@ textarea {
 
   color: var(--secondary-text-coloure);
 }
-.form-group textarea::placeholder {
+.form textarea::placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
 }
+.form__icon {
+  position: absolute;
+  left: 12px;
+  bottom: 12px;
+}
 
-.modal-checkbox {
+.checkbox {
   margin-top: 20px;
   margin-bottom: 30px;
 }
 
-.checkbox {
+.checkbox__input {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -853,7 +859,7 @@ textarea {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.icon-checkbox {
+.checkbox__icon {
   display: inline-block;
   margin-right: 7px;
   width: 16px;
@@ -862,7 +868,7 @@ textarea {
   border-radius: 2px;
   background-color: #ffffff;
 }
-.checkbox:checked + .icon-checkbox {
+.checkbox__input:checked + .checkbox__icon {
   background-color: var(--accent-coloure);
   border-color: var(--accent-coloure);
   background-image: url("../images/icons/check-icon.svg");
@@ -870,7 +876,7 @@ textarea {
   background-origin: border-box;
 }
 
-.modal-checkbox label {
+.checkbox label {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -880,7 +886,10 @@ textarea {
   color: var(--secondary-text-coloure);
 }
 
-.modal-button-submit {
+.submit {
+  text-align: center;
+}
+.submit__button {
   width: 200px;
   height: 50px;
   padding-top: 10px;
@@ -902,19 +911,11 @@ textarea {
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button-submit:focus,
-.modal-button-submit:hover {
+.submit__buttont:focus,
+.submit__button:hover {
   background-color: #188ce8;
 }
 
-.input-icon {
-  position: absolute;
-  left: 12px;
-  bottom: 12px;
-}
-.submit-wrapper {
-  text-align: center;
-}
 .checkbox-link {
   color: var(--accent-coloure);
   text-decoration: underline;
