--- a/css/styles.css
+++ b/css/styles.css
@@ -779,7 +779,7 @@ img {
   margin-top: 10px;
 }
 
-.form input {
+.form__input {
   margin: 0;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -793,18 +793,15 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form input:focus + .form__icon {
+.form__input:focus + .form__icon {
   fill: var(--accent-coloure);
 }
-.form input:focus {
+.form__input:focus {
   border: 1px solid var(--accent-coloure);
   outline-color: var(--accent-coloure);
 }
 
-textarea {
-  resize: none;
-}
-.form textarea {
+.form__textarea {
   height: 120px;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -815,14 +812,16 @@ textarea {
   box-sizing: border-box;
   border-radius: 4px;
 
+  resize: none;
+
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form textarea:focus {
+.form__textarea:focus {
   border: 1px solid var(--accent-coloure);
   outline-color: var(--accent-coloure);
 }
 
-.form label {
+.form__label {
   margin-bottom: 4px;
 
   font-size: 12px;
@@ -831,7 +830,7 @@ textarea {
 
   color: var(--secondary-text-coloure);
 }
-.form textarea::placeholder {
+.form__textarea::placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -876,7 +875,7 @@ textarea {
   background-origin: border-box;
 }
 
-.checkbox label {
+.checkbox__label {
   display: flex;
   align-items: center;
   justify-content: center;
