--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,10 @@ img {
   margin-left: auto;
 }
 
+.title--hidden {
+  display: none;
+}
+
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -66,24 +70,58 @@ img {
           align-items: center;
 }
 
-.header__nav {
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.header__list {
+.nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.header__item {
+.nav__item {
   margin-right: 50px;
 }
 
-.header__item:last-child {
+.nav__item:last-child {
   margin-right: 0px;
+}
+
+.nav__link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav__link:hover, .nav__link:focus, .nav__link:active {
+  color: #2196f3;
+}
+
+.nav__link--current {
+  color: #2196f3;
+  position: relative;
+}
+
+.nav__link--current::after {
+  display: block;
+  position: absolute;
+  content: "";
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
 }
 
 .logo {
@@ -104,40 +142,6 @@ img {
   font-size: 26px;
   line-height: 1.2;
   color: #212121;
-}
-
-.header__link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #212121;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1;
-  letter-spacing: 0.02em;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header__link:hover, .header__link:focus, .header__link:active {
-  color: #2196f3;
-}
-
-.header__link--current {
-  color: #2196f3;
-  position: relative;
-}
-
-.header__link--current::after {
-  display: block;
-  position: absolute;
-  content: "";
-  bottom: -2px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
 }
 
 .contact-info {
@@ -181,6 +185,16 @@ img {
 .contact-info__link:hover .contact-info__icon,
 .contact-info__link:focus .contact-info__icon {
   fill: #2196f3;
+}
+
+.section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+  color: #212121;
+  margin-bottom: 50px;
+  margin-top: 0px;
 }
 
 .hero {
@@ -243,12 +257,7 @@ img {
   padding-bottom: 94px;
 }
 
-.features--hidden,
-.portfolio--hidden {
-  display: none;
-}
-
-.features__list {
+.features {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -258,7 +267,7 @@ img {
   margin-left: 30px;
 }
 
-.features__bcg {
+.features__background {
   display: block;
   margin-bottom: 30px;
   background-color: #f5f4fa;
@@ -284,16 +293,6 @@ img {
 
 .activities {
   padding-top: 0px;
-}
-
-.activities__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
-  text-align: center;
-  color: #212121;
-  margin-bottom: 50px;
-  margin-top: 0px;
 }
 
 .activities__list {
@@ -330,16 +329,6 @@ img {
 
 .team {
   background-color: #f5f4fa;
-}
-
-.team__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
-  text-align: center;
-  color: #212121;
-  margin-bottom: 50px;
-  margin-top: 0px;
 }
 
 .card-set {
@@ -419,16 +408,7 @@ img {
   fill: #fff;
 }
 
-.clients__title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  color: #212121;
-}
-
-.clients__list {
+.clients {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -891,7 +871,7 @@ img {
   margin-left: 3px;
 }
 
-.portfolio__button-list {
+.filtr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -901,11 +881,11 @@ img {
   margin-bottom: 50px;
 }
 
-.portfolio__button-item + .portfolio__button-item {
+.filtr__item + .filtr__item {
   margin-left: 8px;
 }
 
-.portfolio__button {
+.filtr__button {
   display: inline-block;
   padding-top: 6px;
   padding-bottom: 6px;
@@ -926,14 +906,14 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio__button:focus, .portfolio__button:hover {
+.filtr__button:focus, .filtr__button:hover {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio__button--accent {
+.filtr__button--accent {
   color: #ffffff;
   background-color: #2196f3;
 }
