--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,13 +1,4 @@
-.clients__title {
-  margin-bottom: 50px;
-
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  color: #212121;
-}
-.clients__list {
+.clients {
   display: flex;
   justify-content: space-between;
 }
@@ -15,7 +6,7 @@
 .clients__icon {
   fill: #afb1b8;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms $transition-timing-function;
 
   .clients__border:hover &,
   .clients__border:focus & {
@@ -30,7 +21,7 @@
   height: 92px;
   padding: 16px 32px;
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms $transition-timing-function;
 
   &:focus,
   &:hover {
