--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,14 +1,10 @@
-.features--hidden,
-.portfolio--hidden {
-  display: none;
-}
-.features__list {
+.features {
   display: flex;
 }
 .features__item + .features__item {
   margin-left: 30px;
 }
-.features__bcg {
+.features__background {
   display: block;
 
   margin-bottom: 30px;
