--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -20,7 +20,7 @@
 .footer__address {
   color: #ffffff;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms $transition-timing-function;
 
   &:hover,
   &:focus {
@@ -34,7 +34,7 @@
   display: inline-block;
   margin-top: 9px;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms $transition-timing-function;
 
   &:hover,
   &:focus {
@@ -54,7 +54,7 @@
   height: 44px;
   background-color: #44454e;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms $transition-timing-function;
 
   &:hover,
   &:focus {
