--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -52,7 +52,7 @@
   text-align: center;
   border-color: transparent;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms $transition-timing-function;
 
   &:focus,
   &:hover {
