--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,7 +7,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms $transition-timing-function;
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -18,7 +18,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms $transition-timing-function;
 
   min-width: 528px;
   min-height: 581px;
@@ -42,7 +42,7 @@
   border-radius: 50%;
   background-color: #fff;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms $transition-timing-function;
 
   &:hover,
   &:focus {
@@ -90,8 +90,8 @@
   box-sizing: border-box;
   border-radius: 4px;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms $transition-timing-function,
+    border 250ms $transition-timing-function;
 
   &:focus {
     border: 1px solid $accent-coloure;
@@ -112,7 +112,7 @@
 
   resize: none;
 
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms $transition-timing-function;
 
   &:focus {
     border: 1px solid $accent-coloure;
@@ -211,7 +211,7 @@
 
   color: #ffffff;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms $transition-timing-function;
 
   &:focus,
   &:hover {
