--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -1,12 +1,12 @@
-.portfolio__button-list {
+.filtr {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
-.portfolio__button-item + .portfolio__button-item {
+.filtr__item + .filtr__item {
   margin-left: 8px;
 }
-.portfolio__button {
+.filtr__button {
   display: inline-block;
   padding-top: 6px;
   padding-bottom: 6px;
@@ -23,9 +23,9 @@
   border-radius: 4px;
   border: 1px solid transparent;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms $transition-timing-function,
+    background-color 250ms $transition-timing-function,
+    box-shadow 250ms $transition-timing-function;
 
   &:focus,
   &:hover {
@@ -49,7 +49,7 @@
   margin-right: 30px;
   margin-bottom: 30px;
 
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms $transition-timing-function;
 
   &:nth-child(3n) {
     margin-right: 0px;
@@ -113,7 +113,7 @@
   color: #ffffff;
 
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms $transition-timing-function;
 
   .examples-set__card:hover &,
   .examples-set__card:focus & {
