--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,17 +2,6 @@
   background-color: #f5f4fa;
 }
 
-.team__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
-  text-align: center;
-  color: $primery-text-coloure;
-
-  margin-bottom: 50px;
-  margin-top: 0px;
-}
-
 .card-set {
   display: flex;
 }
@@ -63,7 +52,7 @@
   border-radius: 50%;
   padding: 12px;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms $transition-timing-function;
 
   &:hover,
   &:focus {
@@ -74,7 +63,7 @@
 .card-set__icon {
   fill: #afb1b8;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms $transition-timing-function;
 
   .card-set__link:hover &,
   .card-set__link:focus & {
