--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./utils/variables";
 @import "./utils/common";
 @import "./components/header";
+@import "./components/section-title";
 @import "./components/hero";
 @import "./components/features";
 @import "./components/activities";
